Add EOS dependencies and other packages used during development

--- a/roles/eosdev/tasks/main.yml
+++ b/roles/eosdev/tasks/main.yml
@@ -3,8 +3,8 @@
 
 # file: roles/eosdev/tasks/main.yml
 
+- include: devel.yml tags=devel
 - include: git.yml tags=git
-
 - include: emacs.yml tags=emacs
-
 - include: xrootd_dep.yml tags=xrootd
+- include: eos_dep.yml tags=eos
