--- a/roles/eosdev/tasks/devel.yml
+++ b/roles/eosdev/tasks/devel.yml
@@ -11,10 +11,16 @@
     - gcc,gcc-c++
     - krb5-workstation
     - pylint
+    - ceph
+    - ceph-common
+    - ceph-devel
+    - gtest,gtest-devel
+    - python-zmq,python-daemon
 
 - name: install GUI support and packages that need GUI
   yum: pkg={{ item }} state=present
   with_items:
+    - xorg-x11-server-Xorg
     - gdm
     - cmake-gui
   tags:
