Add libcurl-devel dependency for EOS.

--- a/roles/eosdev/tasks/eos_dep.yml
+++ b/roles/eosdev/tasks/eos_dep.yml
@@ -22,6 +22,7 @@
     - ncurses-static
     - curl-devel
     - libattr-devel
+    - libcurl-devel
     - sparsehash-devel
     - zeromq3,zeromq3-devel
     - uuid-devel,libuuid-devel
