Drop the old monolithic eosdev role which will be split in several smaller roles

--- a/site.yml
+++ b/site.yml
@@ -3,5 +3,11 @@
 
 # file: site.yml
 
-- include: eos.yml
-- include: redis.yml
+- hosts: all
+  become_user: esindril
+  roles:
+    - env.role
+#    - xrootd.role    
+  vars:
+     user_name: esindril
+     grp_name: c3
