--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "roles/eosdev/files/emacs-init"]
-	path = roles/eosdev/files/emacs-init
+[submodule "roles/env.role/files/emacs-init"]
+	path = roles/env.role/files/emacs-init
 	url = git@github.com:esindril/emacs-init.git
