Add jsoncpp-devel package for EOS dependencies

--- a/roles/eos.role/tasks/eos_dep.yml
+++ b/roles/eos.role/tasks/eos_dep.yml
@@ -10,6 +10,7 @@
     - openldap-devel
     - ncurses-static
     - curl-devel
+    - jsoncpp-devel
     - libattr-devel
     - libcurl-devel
     - sparsehash-devel
