Change localrepo name so that it is disabled by default

--- a/roles/env.role/tasks/local_repo.yml
+++ b/roles/env.role/tasks/local_repo.yml
@@ -14,7 +14,7 @@
     - "{{ scripts_dir }}"
 
 - name: create local repository to the YUM repos
-  template: src=localrepo.repo.j2 dest=/etc/yum.repos.d/localrepo.repo
+  template: src=localrepo.repo.j2 dest=/etc/yum.repos.d/localrepo.repo_bkp
             owner=root group=root mode=0644
 
 - name: script to push XRootD rpms to local repository
